# cvmodtool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
resources/: build-and-install.bat  profiles.toml
resources/modules/base/: PROJECTNAME.uproject  module.toml
resources/modules/base/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
resources/modules/enemies/: module.toml
resources/modules/enemies/Content/Characters/Blueprints/AncientHannibal/: BP_AncientHannibal.uasset
resources/modules/enemies/Content/Characters/Blueprints/AncientMarduk/: BP_AncientMarduk.uasset
resources/modules/enemies/Content/Characters/Blueprints/King/: BP_King.uasset  (+2 more)
resources/modules/enemies/Content/CppMigrationWork/Enemy/: BP_EnemyCommon.uasset
resources/modules/extensions/: PROJECTNAME.uproject  module.toml
resources/modules/extensions/Source/: PROJECTNAME.Target.cs  PROJECTNAMEEditor.Target.cs
resources/modules/extensions/Source/Extensions/: Extensions.Build.cs
resources/modules/extensions/Source/Extensions/Private/: Extensions.cpp
resources/modules/extensions/Source/Extensions/Public/: Extensions.h
resources/modules/gitsupport/: .gitignore  module.toml
resources/modules/interactive/: module.toml
resources/modules/interactive/Content/CppMigrationWork/Player/: BP_Player.uasset  BP_Player_Dev.uasset  BP_Player_Tutorial.uasset
resources/modules/interactive/Content/ModResources/Base/: InteractComponent.uasset  ModHelperFunctions.uasset
resources/modules/interactive/Content/ModResources/Basic/: InteractiveObjectBase.uasset  MacroLibrary.uasset
resources/modules/interactive/Content/UserInterface/FieldTrigger/: WDT_FieldTriggerMessage.uasset
resources/modules/killvolume/: module.toml
resources/modules/killvolume/Content/ModResources/: BP_ModKillVolume.uasset
resources/modules/ladder/: module.toml
resources/modules/ladder/Content/ModResources/: BP_ModLadder.uasset
resources/modules/ladder/Source/Extensions/Private/: NavArea_Ladder.cpp
resources/modules/ladder/Source/Extensions/Public/: NavArea_Ladder.h
resources/modules/mistwall/: module.toml
resources/modules/mistwall/Content/ModResources/: BP_ModMistWall.uasset
resources/modules/spawner/: module.toml
resources/modules/spawner/Content/ModResources/Basic/: ActorProxySpawner.uasset  DefaultTextMaterialOpaque.uasset
resources/modules/startmap/: module.toml
resources/modules/startmap/Content/Maps/: work.umap
resources/modules/stateful/: module.toml
resources/modules/stateful/Content/ModResources/Stateful/: EnemySaveInterface.uasset  InteractCounter.uasset  InteractCounterSaveInterface.uasset  LevelOrigin.uasset  LevelState.uasset  PlayerSpawnSaveInterface.uasset  StatefulEnemy.uasset  StatefulEnemySpawner.uasset  StatefulMacroLib.uasset  StatefulMistle.uasset
resources/modules/workmapdoor/: module.toml
resources/modules/workmapdoor/Content/ModResources/: EnterDevMap.uasset
src/: colored.rs  config.rs  main.rs  profiles.rs  utils.rs
src/commands/: build.rs  create.rs  install.rs  mod.rs  package.rs  update.rs
src/config/: mod.rs  modconfig.rs  toolconfig.rs
src/resources/: mod.rs  modules.rs  profiles.rs  update.rs
src/updater/: github.rs  mod.rs
updater/: Cargo.toml
updater/src/: extract.rs  lib.rs  locker.rs  progress.rs  version.rs
updater/src/procedures/: mod.rs  resources.rs  selfexe.rs
updater/src/provider/: github.rs  mod.rs
updater/src/update/: mod.rs  procedure.rs  step.rs
(+150 files in other folders)
