[package]
name = "cvmodtool"
version = "0.5.0"
edition = "2021"
authors = ["Amion <icsanyi96@gmail.com>"]
description = "Code Vein modding helper tool for managing UE4 projects"
readme = "README.md"
repository = "https://github.com/AmionSky/cvmodtool"
license = "GPL-3.0-only"
publish = false

[dependencies]
clap = { version = "4.4.0", features = ["derive", "unicode"] }
serde = { version = "1.0.0", features = ["derive"] }
json = { package = "serde_json", version = "1.0.0" }
toml = "0.8.0"
walkdir = "2.3.0"
once_cell = "1.18.0"
anstyle = "1.0.0"
anstream = "0.5.0"

[dependencies.updater]
git = "https://github.com/AmionSky/updater"
rev = "46838561dc6f57a8738dcf02606cc5b648284c7e"
features = ["procedures", "ext-zip"]
optional = true

[features]
default = ["updater"]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
