[package]
name = "updater"
version = "0.4.0"
authors = ["Csányi István <icsanyi96@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
fs2 = "0.4"
tempfile = "3"
semver = "0.10"
ureq = { version = "1", default-features = false, features = ["tls", "json"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
